Add a trimmed project before aggregate to avoid NPE in Calcite (#3621)
* Add a trimmed project before aggregate to avoid NPE in Calcite

Signed-off-by: Lantao Jin <ltjin@amazon.com>

* Fix IT

Signed-off-by: Lantao Jin <ltjin@amazon.com>

---------

Signed-off-by: Lantao Jin <ltjin@amazon.com>
Signed-off-by: xinyual <xinyual@amazon.com>